# sem5

./: .gitignore  package.xml  setup.py  test4.txt  test6.txt
Kinematics/: frames_2025-04-25_19.10.21.gv
Kinematics/src/arduinobot_moveit/launch/: moveit.launch.py
Kinematics/src/arduinobot_py_examples/arduinobot_py_examples/: simple_subscriber.py:Zone.Identifier
install/: local_setup.sh  setup.sh
install/arduino_py_examples/share/arduino_py_examples/: package.sh  package.xml
install/arduinobot_controller/share/arduinobot_controller/: package.sh
install/arduinobot_cpp_examples/lib/arduinobot_cpp_examples/: simple_parameter  simple_publisher
install/arduinobot_cpp_examples/share/arduinobot_cpp_examples/: package.sh
install/arduinobot_description/share/arduinobot_description/: package.sh  package.xml
install/servo_control/share/servo_control/: package.sh  package.xml
launch/: servo_controller.launch.py
log/: latest_build
resource/: servo_control:Zone.Identifier
src/arduino_cpp_examples/: CMakeLists.txt  package.xml
src/arduino_cpp_examples/src/: simple_parameter.cpp  simple_publisher.cpp  simple_subscriber.cpp
src/arduino_py_examples/: setup.py
src/arduinobot_controller/: package.xml
src/arduinobot_controller/config/: arduinobot_controllersORI.yaml
src/arduinobot_description/: CMakeLists.txt
src/arduinobot_description/launch/: gazebo.launch.py
src/arduinobot_description/rviz/: display.rviz
src/arduinobot_description/urdf/: arduinobot_ros2_control.xacro  arduinobot_ros2_control.xacro:Zone.Identifier
(+4 files in other folders)
